# Data-Structures-and-Algorithms

./: .gitignore  README.md
Abstracts/: Abstract.md
Tasks/: CMakeLists.txt  task1.cpp
Tasks/1 task/: CMakeLists.txt
Tasks/1 task/plot/: plots.py
Tasks/1 task/src/: main.cpp  plots.cpp  results.csv
Tasks/1 task/templates/: templates.hpp
Tasks/1 task/tests/: test.cpp
Tasks/dynamic_array/: dynamic_array.hpp  test_dynamic_array.cpp
Tasks/list/: linked_list.hpp  test_linked_list.cpp
Tasks/recursion/: input.txt  main.cpp  test.cpp  text_utils.cpp  text_utils.hpp
Tasks/src/: main.cpp
Tasks/stack/: calculator.hpp  stack.hpp  tests.cpp
Tasks/templates/: templates.cpp  templates.hpp
Tasks/tests/: CMakeLists.txt  test.cpp
